# pymdmix2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Singularity.def  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: e2e-ambertools.yml
docs/: BISKIT_MIGRATION.md  CONSISTENCY_REPORT.md  IMPLEMENTATION_PLAN.md  PLAN.md  PORT_ASSESSMENT.md  PROGRESS.md  REWRITE_PLAN.md  cli.md  configuration.md  index.md  installation.md  quickstart.md  solvents.md  tools.md
docs/analysis/: alignment.md  density.md  energy.md  hotspots.md  overview.md  residence.md
docs/api/: cli-reference.md
docs/tutorials/: toy-project-setup.md  toy-project-simulation.md
docs/user-guide/: md-settings.md  projects.md  queue-scripts.md  replicas.md  solvents.md  system-preparation.md
examples/: README.md  analysis.toml  custom_solvent.toml  mdsettings.toml  project.toml  replica.toml  system.toml
pymdmix/: __init__.py  cli.py
pymdmix/analysis/: __init__.py  align.py  base.py  density.py  energy.py  hotspots.py  manager.py  manager.py.backup  residence.py
scripts/: build_docker.sh  build_singularity.sh  migrate_solvents.py  run_ambertools_tests.sh
tests/: __init__.py  conftest.py  test_actions_manager.py  test_align.py  test_ambertools_e2e.py  test_analysis.py  test_browser.py  test_cli.py  test_cli_e2e.py  test_cloud.py  test_dcd_parser.py  test_e2e_workflow.py  test_energy.py  test_engines.py  test_executor.py  test_grid.py  test_gromacs.py  test_hotspot_set.py  test_integration.py  test_integration_real_data.py  test_io.py  test_mdsettings.py  test_off_manager.py  test_openmm_namd.py  test_parsers.py  test_prepare.py  test_project.py  test_setup.py  test_solvent.py  test_structure.py  test_structure_new.py  test_system.py  test_trajectory.py  test_utils.py
(+57 files in other folders)
