[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdmix"
version = "0.3.0"
description = "Molecular Dynamics with organic solvent mixtures for drug discovery"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Alvarez-Garcia", email = "algarcia.daniel@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "parmed>=4.0",
    "click>=8.0",
]

[project.optional-dependencies]
full = [
    "MDAnalysis>=2.0",
    "matplotlib>=3.5",
    "netCDF4>=1.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
mdmix = "pymdmix.cli:main"

[project.urls]
Homepage = "https://github.com/DAlvGar/pyMDmix"
Documentation = "http://mdmix.sourceforge.net"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymdmix*"]

[tool.setuptools.package-data]
"pymdmix.data" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
